// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render React extensions correctly 1`] = `
<Extension
  appState={
    {
      "documentationUrl": "https://docs.sonarqube.org/10.0",
      "edition": "community",
      "productionDatabase": true,
      "qualifiers": [
        "TRK",
      ],
      "settings": {},
      "version": "1.0",
    }
  }
  currentUser={
    {
      "dismissedNotices": {
        "educationPrinciples": false,
      },
      "isLoggedIn": false,
    }
  }
  extension={
    {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={{}}
  location={
    {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": {},
      "search": "",
      "state": {},
    }
  }
  router={
    {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
  theme={
    {
      "avatar": {
        "color": [
          [
            225,
            230,
            243,
          ],
          [
            209,
            215,
            254,
          ],
          [
            246,
            206,
            187,
          ],
          [
            236,
            253,
            243,
          ],
          [
            241,
            250,
            210,
          ],
          [
            254,
            245,
            208,
          ],
          [
            254,
            219,
            199,
          ],
          [
            254,
            228,
            226,
          ],
          [
            233,
            244,
            251,
          ],
        ],
        "contrast": [
          [
            8,
            9,
            12,
          ],
          [
            27,
            34,
            80,
          ],
          [
            130,
            43,
            10,
          ],
          [
            5,
            79,
            49,
          ],
          [
            49,
            85,
            22,
          ],
          [
            102,
            64,
            15,
          ],
          [
            122,
            46,
            14,
          ],
          [
            93,
            29,
            19,
          ],
          [
            23,
            67,
            97,
          ],
        ],
      },
      "borders": {
        "active": [
          "4px",
          "solid",
          123,
          135,
          217,
        ],
        "default": [
          "1px",
          "solid",
          235,
          235,
          235,
        ],
        "focus": [
          "4px",
          "solid",
          197,
          205,
          223,
          0.2,
        ],
        "xsActive": [
          "3px",
          "solid",
          123,
          135,
          217,
        ],
      },
      "colors": {
        "activityCommentPipe": [
          243,
          185,
          157,
        ],
        "almCardBorder": [
          221,
          221,
          221,
        ],
        "avatarBackground": [
          255,
          255,
          255,
        ],
        "avatarBorder": [
          225,
          230,
          243,
        ],
        "backgroundPrimary": [
          252,
          252,
          253,
        ],
        "backgroundSecondary": [
          255,
          255,
          255,
        ],
        "badgeCounter": [
          225,
          230,
          243,
        ],
        "badgeDefault": [
          225,
          230,
          243,
        ],
        "badgeDeleted": [
          254,
          228,
          226,
        ],
        "badgeNew": [
          209,
          215,
          254,
        ],
        "bannerIcon": "transparent",
        "bannerIconFocus": [
          217,
          45,
          32,
        ],
        "bannerIconHover": [
          217,
          45,
          32,
          0.2,
        ],
        "bannerMessage": [
          254,
          243,
          242,
        ],
        "bannerMessageIcon": [
          128,
          27,
          20,
        ],
        "border": [
          235,
          235,
          235,
        ],
        "breadcrumb": "transparent",
        "bubble.1": [
          18,
          183,
          106,
          0.3,
        ],
        "bubble.2": [
          110,
          183,
          18,
          0.3,
        ],
        "bubble.3": [
          245,
          184,
          64,
          0.3,
        ],
        "bubble.4": [
          247,
          95,
          9,
          0.3,
        ],
        "bubble.5": [
          240,
          68,
          56,
          0.3,
        ],
        "bubbleChartLine": [
          235,
          235,
          235,
        ],
        "bubbleDefault": [
          85,
          170,
          223,
          0.3,
        ],
        "button": [
          93,
          108,
          208,
        ],
        "buttonDisabled": [
          239,
          242,
          249,
        ],
        "buttonDisabledBorder": [
          197,
          205,
          223,
        ],
        "buttonHover": [
          75,
          86,
          187,
        ],
        "buttonSecondary": [
          255,
          255,
          255,
        ],
        "buttonSecondaryBorder": [
          197,
          205,
          223,
        ],
        "buttonSecondaryHover": [
          239,
          242,
          249,
        ],
        "checkboxCheckedHover": [
          123,
          135,
          217,
        ],
        "checkboxDisabled": [
          239,
          242,
          249,
        ],
        "checkboxDisabledChecked": [
          197,
          205,
          223,
        ],
        "checkboxHover": [
          232,
          235,
          255,
        ],
        "checkboxLabel": [
          62,
          67,
          87,
        ],
        "codeLine": [
          255,
          255,
          255,
        ],
        "codeLineBorder": [
          221,
          221,
          221,
        ],
        "codeLineCovered": [
          166,
          244,
          197,
        ],
        "codeLineCoveredUnderline": [
          18,
          183,
          106,
          0.15,
        ],
        "codeLineDuplication": [
          197,
          205,
          223,
        ],
        "codeLineEllipsis": [
          255,
          255,
          255,
        ],
        "codeLineEllipsisHover": [
          239,
          242,
          249,
        ],
        "codeLineHighlighted": [
          225,
          230,
          243,
        ],
        "codeLineHover": [
          239,
          242,
          249,
        ],
        "codeLineIssueIndicator": [
          106,
          117,
          144,
        ],
        "codeLineIssueLocation": [
          253,
          162,
          155,
          0.15,
        ],
        "codeLineIssueLocationSelected": [
          253,
          162,
          155,
          0.5,
        ],
        "codeLineIssueMessageTooltip": [
          62,
          67,
          87,
        ],
        "codeLineIssuePointerBorder": [
          255,
          255,
          255,
        ],
        "codeLineIssueSquiggle": [
          253,
          162,
          155,
        ],
        "codeLineLocationHighlighted": [
          197,
          205,
          223,
          0.6,
        ],
        "codeLineLocationMarker": [
          254,
          205,
          202,
        ],
        "codeLineLocationMarkerSelected": [
          253,
          162,
          155,
        ],
        "codeLineLocationSelected": [
          225,
          230,
          243,
        ],
        "codeLineMeta": [
          166,
          173,
          194,
        ],
        "codeLineMetaHover": [
          106,
          117,
          144,
        ],
        "codeLineNewCodeUnderline": [
          159,
          169,
          237,
          0.15,
        ],
        "codeLinePartiallyCoveredA": [
          217,
          45,
          32,
        ],
        "codeLinePartiallyCoveredB": [
          255,
          255,
          255,
        ],
        "codeLineUncovered": [
          217,
          45,
          32,
        ],
        "codeLineUncoveredUnderline": [
          240,
          68,
          56,
          0.15,
        ],
        "codeSnippetAnnotations": [
          34,
          84,
          192,
        ],
        "codeSnippetBackground": [
          252,
          252,
          253,
        ],
        "codeSnippetBody": [
          51,
          53,
          60,
        ],
        "codeSnippetBorder": [
          225,
          230,
          243,
        ],
        "codeSnippetComments": [
          109,
          111,
          119,
        ],
        "codeSnippetConstants": [
          126,
          83,
          5,
        ],
        "codeSnippetHighlight": [
          197,
          205,
          223,
        ],
        "codeSnippetInline": [
          62,
          67,
          87,
        ],
        "codeSnippetKeyword": [
          152,
          29,
          150,
        ],
        "codeSnippetKeywordLight": [
          28,
          28,
          163,
        ],
        "codeSnippetPreprocessingDirective": [
          47,
          103,
          48,
        ],
        "codeSnippetString": [
          32,
          105,
          31,
        ],
        "codeSyntaxAnnotations": [
          35,
          91,
          213,
        ],
        "codeSyntaxBody": [
          56,
          58,
          66,
        ],
        "codeSyntaxComments": [
          95,
          96,
          102,
        ],
        "codeSyntaxConstants": [
          135,
          87,
          2,
        ],
        "codeSyntaxKeyword": [
          162,
          34,
          160,
        ],
        "codeSyntaxKeywordLight": [
          30,
          30,
          173,
        ],
        "codeSyntaxPreprocessingDirective": [
          52,
          114,
          53,
        ],
        "codeSyntaxString": [
          36,
          117,
          35,
        ],
        "coreConceptsBody": [
          62,
          67,
          87,
        ],
        "coreConceptsCloseIcon": [
          166,
          173,
          194,
        ],
        "coreConceptsCompleted": [
          18,
          183,
          106,
        ],
        "coreConceptsHomeBorder": [
          225,
          230,
          243,
        ],
        "coreConceptsProgressBar": [
          239,
          242,
          249,
        ],
        "coreConceptsPulse": [
          93,
          108,
          208,
        ],
        "coreConceptsPulseFallback": [
          255,
          255,
          255,
        ],
        "coreConceptsTitle": [
          62,
          67,
          87,
        ],
        "coverageGreen": [
          18,
          183,
          106,
        ],
        "coverageRed": [
          180,
          35,
          24,
        ],
        "currentColor": "currentColor",
        "danger": [
          180,
          35,
          24,
        ],
        "dangerButton": [
          217,
          45,
          32,
        ],
        "dangerButtonFocus": [
          217,
          45,
          32,
        ],
        "dangerButtonHover": [
          180,
          35,
          24,
        ],
        "dangerButtonSecondary": [
          255,
          255,
          255,
        ],
        "dangerButtonSecondaryBorder": [
          253,
          162,
          155,
        ],
        "dangerButtonSecondaryFocus": [
          249,
          112,
          102,
        ],
        "dangerButtonSecondaryHover": [
          254,
          243,
          242,
        ],
        "datePicker": [
          255,
          255,
          255,
        ],
        "datePickerDefault": [
          255,
          255,
          255,
        ],
        "datePickerDisabled": [
          255,
          255,
          255,
        ],
        "datePickerHover": [
          225,
          230,
          243,
        ],
        "datePickerIcon": [
          197,
          205,
          223,
        ],
        "datePickerRange": [
          209,
          215,
          254,
        ],
        "datePickerSelected": [
          93,
          108,
          208,
        ],
        "destructiveIcon": "transparent",
        "destructiveIconFocus": [
          217,
          45,
          32,
        ],
        "destructiveIconHover": [
          254,
          243,
          242,
        ],
        "discreetBackground": [
          255,
          255,
          255,
        ],
        "discreetBorder": [
          197,
          205,
          223,
        ],
        "discreetButtonHover": [
          93,
          108,
          208,
        ],
        "discreetFocus": [
          232,
          235,
          255,
        ],
        "discreetFocusBorder": [
          123,
          135,
          217,
        ],
        "discreetHover": [
          239,
          242,
          249,
        ],
        "discreetInteractiveIcon": [
          106,
          117,
          144,
        ],
        "drilldown": [
          62,
          67,
          87,
        ],
        "drilldownBorder": [
          197,
          205,
          223,
        ],
        "dropdownMenu": [
          255,
          255,
          255,
        ],
        "dropdownMenuDanger": [
          217,
          45,
          32,
        ],
        "dropdownMenuDisabled": [
          255,
          255,
          255,
        ],
        "dropdownMenuFocus": [
          232,
          235,
          255,
        ],
        "dropdownMenuFocusBorder": [
          123,
          135,
          217,
        ],
        "dropdownMenuHeader": [
          255,
          255,
          255,
        ],
        "dropdownMenuHover": [
          239,
          242,
          249,
        ],
        "dropdownMenuSubTitle": [
          106,
          117,
          144,
        ],
        "duplicationsIndicator.A": [
          18,
          183,
          106,
        ],
        "duplicationsIndicator.B": [
          18,
          183,
          106,
        ],
        "duplicationsIndicator.C": [
          110,
          183,
          18,
        ],
        "duplicationsIndicator.D": [
          245,
          184,
          64,
        ],
        "duplicationsIndicator.E": [
          247,
          95,
          9,
        ],
        "duplicationsIndicator.F": [
          240,
          68,
          56,
        ],
        "duplicationsIndicatorSecondary": [
          239,
          242,
          249,
        ],
        "errorBackground": [
          254,
          243,
          242,
        ],
        "errorBorder": [
          249,
          112,
          102,
        ],
        "errorText": [
          180,
          35,
          24,
        ],
        "facetHeader": [
          42,
          47,
          64,
        ],
        "facetHeaderDisabled": [
          106,
          117,
          144,
        ],
        "facetItemDisabled": [
          166,
          173,
          194,
        ],
        "facetItemGraph": [
          197,
          205,
          223,
        ],
        "facetItemLight": [
          106,
          117,
          144,
        ],
        "facetItemSelected": [
          232,
          235,
          255,
        ],
        "facetItemSelectedBorder": [
          123,
          135,
          217,
        ],
        "facetItemSelectedHover": [
          209,
          215,
          254,
        ],
        "facetKeyboardHint": [
          239,
          242,
          249,
        ],
        "facetToggleActive": [
          18,
          183,
          106,
        ],
        "facetToggleHover": [
          42,
          47,
          64,
        ],
        "facetToggleInactive": [
          240,
          68,
          56,
        ],
        "filterbar": [
          255,
          255,
          255,
        ],
        "filterbarBorder": [
          225,
          230,
          243,
        ],
        "flagMessageBackground": [
          255,
          255,
          255,
        ],
        "footer": [
          255,
          255,
          255,
        ],
        "footerBorder": [
          221,
          221,
          221,
        ],
        "graphCursorLineColor": [
          106,
          117,
          144,
        ],
        "graphGridColor": [
          235,
          235,
          235,
        ],
        "graphLegendBorder": [
          62,
          67,
          87,
        ],
        "graphLineColor.0": [
          58,
          127,
          173,
        ],
        "graphLineColor.1": [
          85,
          170,
          223,
        ],
        "graphLineColor.2": [
          143,
          202,
          234,
        ],
        "graphLineColor.3": [
          58,
          127,
          173,
        ],
        "graphLineColor.4": [
          85,
          170,
          223,
        ],
        "graphLineColor.5": [
          143,
          202,
          234,
        ],
        "graphPointCircleColor": [
          255,
          255,
          255,
        ],
        "graphZoomBackgroundColor": [
          252,
          252,
          253,
        ],
        "graphZoomBorderColor": [
          225,
          230,
          243,
        ],
        "graphZoomHandleColor": [
          106,
          117,
          144,
        ],
        "highlightedSection": [
          252,
          252,
          253,
        ],
        "highlightedSectionBorder": [
          225,
          230,
          243,
        ],
        "iconCheck": [
          18,
          183,
          106,
        ],
        "iconDirectory": [
          254,
          150,
          75,
        ],
        "iconError": [
          217,
          45,
          32,
        ],
        "iconFavorite": [
          237,
          148,
          106,
        ],
        "iconFile": [
          166,
          173,
          194,
        ],
        "iconHelperHint": [
          225,
          230,
          243,
        ],
        "iconInfo": [
          69,
          149,
          203,
        ],
        "iconNegativeUpdate": [
          253,
          162,
          155,
        ],
        "iconNotificationsOn": [
          159,
          169,
          237,
        ],
        "iconOverviewIssue": [
          106,
          117,
          144,
        ],
        "iconPositiveUpdate": [
          166,
          244,
          197,
        ],
        "iconProject": [
          166,
          173,
          194,
        ],
        "iconRuleInheritanceOverride": [
          249,
          112,
          102,
        ],
        "iconSeverityInfo": [
          110,
          185,
          228,
        ],
        "iconSeverityMajor": [
          249,
          112,
          102,
        ],
        "iconSeverityMinor": [
          166,
          208,
          91,
        ],
        "iconStatus": [
          197,
          205,
          223,
        ],
        "iconStatusResolved": [
          106,
          117,
          144,
        ],
        "iconSuccess": [
          3,
          152,
          85,
        ],
        "iconTrendDisabled": [
          106,
          117,
          144,
        ],
        "iconTrendNegative": [
          249,
          112,
          102,
        ],
        "iconTrendNeutral": [
          110,
          185,
          228,
        ],
        "iconTrendPositive": [
          50,
          213,
          131,
        ],
        "iconUnitTest": [
          166,
          173,
          194,
        ],
        "iconWarning": [
          209,
          152,
          52,
        ],
        "illustrationInlineBorder": [
          225,
          230,
          243,
        ],
        "illustrationOutline": [
          106,
          117,
          144,
        ],
        "illustrationPrimary": [
          123,
          135,
          217,
        ],
        "illustrationSecondary": [
          189,
          198,
          255,
        ],
        "illustrationShade": [
          244,
          246,
          255,
        ],
        "infoBackground": [
          245,
          251,
          255,
        ],
        "infoBorder": [
          110,
          185,
          228,
        ],
        "inputBackground": [
          255,
          255,
          255,
        ],
        "inputBorder": [
          197,
          205,
          223,
        ],
        "inputDanger": [
          217,
          45,
          32,
        ],
        "inputDangerFocus": [
          249,
          112,
          102,
        ],
        "inputDisabled": [
          239,
          242,
          249,
        ],
        "inputDisabledBorder": [
          197,
          205,
          223,
        ],
        "inputFocus": [
          123,
          135,
          217,
        ],
        "inputPlaceholder": [
          106,
          117,
          144,
        ],
        "inputRequired": [
          180,
          35,
          24,
        ],
        "inputSuccess": [
          110,
          183,
          18,
        ],
        "inputSuccessFocus": [
          166,
          208,
          91,
        ],
        "interactiveIcon": "transparent",
        "interactiveIconFocus": [
          93,
          108,
          208,
        ],
        "interactiveIconHover": [
          232,
          235,
          255,
        ],
        "issueBoxBorder": [
          197,
          205,
          223,
        ],
        "issueBoxBorderDepracated": [
          197,
          205,
          223,
        ],
        "issueBoxSelectedBorder": [
          253,
          162,
          155,
        ],
        "issueTypeIcon": [
          254,
          205,
          202,
        ],
        "keyboardHintKey": [
          225,
          230,
          243,
        ],
        "linkActive": [
          75,
          86,
          187,
        ],
        "linkDefault": [
          93,
          108,
          208,
        ],
        "linkDiscreet": "currentColor",
        "linkTooltipActive": [
          209,
          215,
          254,
        ],
        "linkTooltipDefault": [
          189,
          198,
          255,
        ],
        "listMarker": [
          166,
          173,
          194,
        ],
        "mainBar": [
          255,
          255,
          255,
        ],
        "mainBarDarkLogo": [
          18,
          20,
          29,
        ],
        "mainBarHover": [
          42,
          47,
          64,
        ],
        "mainBarLogo": [
          255,
          255,
          255,
        ],
        "mainBarNews": [
          232,
          235,
          255,
        ],
        "menuBorder": [
          123,
          135,
          217,
        ],
        "modalContents": [
          255,
          255,
          255,
        ],
        "modalOverlay": [
          8,
          9,
          12,
          0.75,
        ],
        "navbar": [
          255,
          255,
          255,
        ],
        "navbarTextMeta": [
          62,
          67,
          87,
        ],
        "newCodeHighlight": [
          159,
          169,
          237,
        ],
        "newCodeLegend": [
          159,
          169,
          237,
          0.15,
        ],
        "newCodeLegendBorder": [
          189,
          198,
          255,
        ],
        "newsBar": [
          255,
          255,
          255,
        ],
        "newsBorder": [
          221,
          221,
          221,
        ],
        "newsContent": [
          255,
          255,
          255,
        ],
        "newsTag": [
          239,
          242,
          249,
        ],
        "numberedList": [
          232,
          235,
          255,
        ],
        "pageBlock": [
          255,
          255,
          255,
        ],
        "pageBlockBorder": [
          225,
          230,
          243,
        ],
        "pageContent": [
          62,
          67,
          87,
        ],
        "pageContentDark": [
          42,
          47,
          64,
        ],
        "pageContentLight": [
          106,
          117,
          144,
        ],
        "pageTitle": [
          29,
          33,
          47,
        ],
        "pipeSeparator": [
          225,
          230,
          243,
        ],
        "popup": [
          255,
          255,
          255,
        ],
        "popupBorder": [
          197,
          205,
          223,
        ],
        "primary": [
          93,
          108,
          208,
        ],
        "primaryDark": [
          75,
          86,
          187,
        ],
        "primaryLight": [
          123,
          135,
          217,
        ],
        "productNews": [
          232,
          235,
          255,
        ],
        "productNewsHover": [
          209,
          215,
          254,
        ],
        "projectCardBackground": [
          255,
          255,
          255,
        ],
        "projectCardBorder": [
          225,
          230,
          243,
        ],
        "qgIndicatorFailed": [
          254,
          205,
          202,
        ],
        "qgIndicatorNotComputed": [
          197,
          205,
          223,
        ],
        "qgIndicatorPassed": [
          209,
          250,
          223,
        ],
        "radio": [
          93,
          108,
          208,
        ],
        "radioBorder": [
          93,
          108,
          208,
        ],
        "radioChecked": [
          232,
          235,
          255,
        ],
        "radioDisabled": [
          197,
          205,
          223,
        ],
        "radioDisabledBackground": [
          239,
          242,
          249,
        ],
        "radioDisabledBorder": [
          197,
          205,
          223,
        ],
        "radioFocus": [
          232,
          235,
          255,
        ],
        "radioFocusBorder": [
          159,
          169,
          237,
        ],
        "radioFocusOutline": [
          159,
          169,
          237,
          0.2,
        ],
        "radioHover": [
          232,
          235,
          255,
        ],
        "rating.A": [
          209,
          250,
          223,
        ],
        "rating.B": [
          225,
          245,
          168,
        ],
        "rating.C": [
          252,
          233,
          163,
        ],
        "rating.D": [
          255,
          214,
          175,
        ],
        "rating.E": [
          254,
          205,
          202,
        ],
        "resizer": [
          197,
          205,
          223,
        ],
        "roadmap": [
          244,
          246,
          255,
        ],
        "roadmapContent": "transparent",
        "scrollbar": [
          252,
          252,
          253,
        ],
        "searchHighlight": [
          250,
          230,
          220,
        ],
        "selectOptionSelected": [
          239,
          242,
          249,
        ],
        "selectionCardBorder": [
          225,
          230,
          243,
        ],
        "selectionCardBorderDisabled": [
          197,
          205,
          223,
        ],
        "selectionCardBorderHover": [
          189,
          198,
          255,
        ],
        "selectionCardBorderSelected": [
          123,
          135,
          217,
        ],
        "selectionCardDisabled": [
          239,
          242,
          249,
        ],
        "selectionCardHeader": [
          62,
          67,
          87,
        ],
        "separatorCircle": [
          197,
          205,
          223,
        ],
        "separatorSlash": [
          166,
          173,
          194,
        ],
        "sidebarActiveIcon": [
          197,
          205,
          223,
        ],
        "sidebarBackground": [
          29,
          33,
          47,
        ],
        "sidebarBorder": [
          62,
          67,
          87,
        ],
        "sidebarIcon": [
          106,
          117,
          144,
        ],
        "sidebarItemActive": [
          18,
          20,
          29,
        ],
        "sidebarTextDisabled": [
          106,
          117,
          144,
        ],
        "sizeIndicator": [
          85,
          170,
          223,
        ],
        "sonarcloud": [
          243,
          112,
          42,
        ],
        "subnavigation": [
          255,
          255,
          255,
        ],
        "subnavigationBorder": [
          221,
          221,
          221,
        ],
        "subnavigationDisabled": [
          166,
          173,
          194,
        ],
        "subnavigationExecutionFlow": [
          252,
          252,
          253,
        ],
        "subnavigationExecutionFlowActive": [
          93,
          108,
          208,
        ],
        "subnavigationExecutionFlowBorder": [
          197,
          205,
          223,
        ],
        "subnavigationExecutionFlowSeparator": [
          225,
          230,
          243,
        ],
        "subnavigationHover": [
          239,
          242,
          249,
        ],
        "subnavigationSelected": [
          225,
          230,
          243,
        ],
        "subnavigationSeparator": [
          235,
          235,
          235,
        ],
        "subnavigationSubheading": [
          252,
          252,
          253,
        ],
        "successBackground": [
          246,
          254,
          249,
        ],
        "successBorder": [
          50,
          213,
          131,
        ],
        "switch": [
          197,
          205,
          223,
        ],
        "switchActive": [
          93,
          108,
          208,
        ],
        "switchButton": [
          255,
          255,
          255,
        ],
        "switchButtonDisabled": [
          239,
          242,
          249,
        ],
        "switchDisabled": [
          225,
          230,
          243,
        ],
        "switchHover": [
          166,
          173,
          194,
        ],
        "switchHoverActive": [
          123,
          135,
          217,
        ],
        "tabBorder": [
          123,
          135,
          217,
        ],
        "tableRowHover": [
          244,
          246,
          255,
        ],
        "tableRowSelected": [
          159,
          169,
          237,
        ],
        "tag": [
          239,
          242,
          249,
        ],
        "thirdPartyButton": [
          255,
          255,
          255,
        ],
        "thirdPartyButtonBorder": [
          197,
          205,
          223,
        ],
        "thirdPartyButtonHover": [
          239,
          242,
          249,
        ],
        "toggle": [
          255,
          255,
          255,
        ],
        "toggleBorder": [
          197,
          205,
          223,
        ],
        "toggleFocus": [
          197,
          205,
          223,
          0.2,
        ],
        "toggleHover": [
          239,
          242,
          249,
        ],
        "tooltipBackground": [
          42,
          47,
          64,
        ],
        "tooltipHighlight": [
          197,
          205,
          223,
        ],
        "tooltipSeparator": [
          106,
          117,
          144,
        ],
        "transparent": "transparent",
        "warningBackground": [
          252,
          245,
          228,
        ],
        "warningBorder": [
          248,
          205,
          92,
        ],
      },
      "contrasts": {
        "backgroundPrimary": [
          8,
          9,
          12,
        ],
        "backgroundSecondary": [
          8,
          9,
          12,
        ],
        "badgeCounter": [
          62,
          67,
          87,
        ],
        "badgeDefault": [
          29,
          33,
          47,
        ],
        "badgeDeleted": [
          93,
          29,
          19,
        ],
        "badgeNew": [
          27,
          34,
          80,
        ],
        "bannerIcon": [
          128,
          27,
          20,
        ],
        "bannerIconHover": [
          128,
          27,
          20,
        ],
        "bannerMessage": [
          93,
          29,
          19,
        ],
        "breadcrumb": [
          106,
          117,
          144,
        ],
        "bubble.1": [
          18,
          183,
          106,
        ],
        "bubble.2": [
          110,
          183,
          18,
        ],
        "bubble.3": [
          245,
          184,
          64,
        ],
        "bubble.4": [
          247,
          95,
          9,
        ],
        "bubble.5": [
          240,
          68,
          56,
        ],
        "bubbleDefault": [
          85,
          170,
          223,
        ],
        "buttonDisabled": [
          166,
          173,
          194,
        ],
        "buttonSecondary": [
          62,
          67,
          87,
        ],
        "checkboxDisabled": [
          197,
          205,
          223,
        ],
        "codeLineCoveredUnderline": [
          2,
          122,
          72,
        ],
        "codeLineEllipsis": [
          166,
          173,
          194,
        ],
        "codeLineEllipsisHover": [
          106,
          117,
          144,
        ],
        "codeLineIssueMessageTooltip": [
          252,
          252,
          253,
        ],
        "codeLineLocationMarker": [
          93,
          29,
          19,
        ],
        "codeLineLocationMarkerSelected": [
          93,
          29,
          19,
        ],
        "codeLineNewCodeUnderline": [
          93,
          108,
          208,
        ],
        "codeLineUncoveredUnderline": [
          180,
          35,
          24,
        ],
        "codeSnippetHighlight": [
          217,
          45,
          32,
        ],
        "coreConceptsProgressBar": [
          123,
          135,
          217,
        ],
        "dangerButton": [
          255,
          255,
          255,
        ],
        "dangerButtonSecondary": [
          180,
          35,
          24,
        ],
        "datePicker": [
          166,
          173,
          194,
        ],
        "datePickerDefault": [
          42,
          47,
          64,
        ],
        "datePickerDisabled": [
          166,
          173,
          194,
        ],
        "datePickerHover": [
          42,
          47,
          64,
        ],
        "datePickerRange": [
          42,
          47,
          64,
        ],
        "datePickerSelected": [
          255,
          255,
          255,
        ],
        "destructiveIcon": [
          217,
          45,
          32,
        ],
        "destructiveIconHover": [
          128,
          27,
          20,
        ],
        "discreetBackground": [
          62,
          67,
          87,
        ],
        "discreetHover": [
          62,
          67,
          87,
        ],
        "dropdownMenu": [
          62,
          67,
          87,
        ],
        "dropdownMenuDisabled": [
          166,
          173,
          194,
        ],
        "dropdownMenuHeader": [
          106,
          117,
          144,
        ],
        "facetKeyboardHint": [
          62,
          67,
          87,
        ],
        "facetToggleActive": [
          255,
          255,
          255,
        ],
        "facetToggleInactive": [
          255,
          255,
          255,
        ],
        "filterbar": [
          62,
          67,
          87,
        ],
        "flagMessageBackground": [
          62,
          67,
          87,
        ],
        "footer": [
          106,
          117,
          144,
        ],
        "graphZoomHandleColor": [
          255,
          255,
          255,
        ],
        "iconHelperHint": [
          62,
          67,
          87,
        ],
        "iconSeverityInfo": [
          255,
          255,
          255,
        ],
        "iconSeverityMajor": [
          255,
          255,
          255,
        ],
        "iconSeverityMinor": [
          255,
          255,
          255,
        ],
        "iconStatusResolved": [
          255,
          255,
          255,
        ],
        "infoBackground": [
          23,
          67,
          97,
        ],
        "inputBackground": [
          62,
          67,
          87,
        ],
        "inputDisabled": [
          166,
          173,
          194,
        ],
        "interactiveIcon": [
          75,
          86,
          187,
        ],
        "interactiveIconHover": [
          43,
          51,
          104,
        ],
        "issueTypeIcon": [
          93,
          29,
          19,
        ],
        "keyboardHintKey": [
          62,
          67,
          87,
        ],
        "mainBar": [
          62,
          67,
          87,
        ],
        "mainBarDarkLogo": [
          255,
          255,
          255,
        ],
        "mainBarLogo": [
          0,
          0,
          0,
        ],
        "mainBarNews": [
          62,
          67,
          87,
        ],
        "navbar": [
          62,
          67,
          87,
        ],
        "newsBar": [
          42,
          47,
          64,
        ],
        "newsContent": [
          62,
          67,
          87,
        ],
        "newsTag": [
          62,
          67,
          87,
        ],
        "numberedList": [
          43,
          51,
          104,
        ],
        "pageBlock": [
          62,
          67,
          87,
        ],
        "popup": [
          62,
          67,
          87,
        ],
        "primary": [
          255,
          255,
          255,
        ],
        "primaryLight": [
          62,
          67,
          87,
        ],
        "productNews": [
          62,
          67,
          87,
        ],
        "productNewsHover": [
          62,
          67,
          87,
        ],
        "qgIndicatorFailed": [
          128,
          27,
          20,
        ],
        "qgIndicatorNotComputed": [
          18,
          20,
          29,
        ],
        "qgIndicatorPassed": [
          5,
          96,
          58,
        ],
        "rating.A": [
          5,
          79,
          49,
        ],
        "rating.B": [
          49,
          85,
          22,
        ],
        "rating.C": [
          102,
          64,
          15,
        ],
        "rating.D": [
          122,
          46,
          14,
        ],
        "rating.E": [
          93,
          29,
          19,
        ],
        "roadmap": [
          42,
          47,
          64,
        ],
        "roadmapContent": [
          62,
          67,
          87,
        ],
        "scrollbar": [
          221,
          221,
          221,
        ],
        "searchHighlight": [
          62,
          67,
          87,
        ],
        "selectionCardDisabled": [
          106,
          117,
          144,
        ],
        "sidebarBackground": [
          197,
          205,
          223,
        ],
        "sidebarItemActive": [
          252,
          252,
          253,
        ],
        "sizeIndicator": [
          255,
          255,
          255,
        ],
        "subnavigation": [
          62,
          67,
          87,
        ],
        "subnavigationExecutionFlow": [
          29,
          33,
          47,
        ],
        "subnavigationHover": [
          29,
          33,
          47,
        ],
        "subnavigationSubheading": [
          106,
          117,
          144,
        ],
        "switchButton": [
          93,
          108,
          208,
        ],
        "switchButtonDisabled": [
          166,
          173,
          194,
        ],
        "switchHover": [
          123,
          135,
          217,
        ],
        "tag": [
          62,
          67,
          87,
        ],
        "thirdPartyButton": [
          62,
          67,
          87,
        ],
        "toggle": [
          62,
          67,
          87,
        ],
        "toggleHover": [
          62,
          67,
          87,
        ],
        "tooltipBackground": [
          239,
          242,
          249,
        ],
      },
      "highlightTheme": "atom-one-light.css",
      "id": "light-theme",
      "images": {
        "AzurePipe": "/images/alms/azure.svg",
        "BitbucketAzure": "/images/alms/azure.svg",
        "BitbucketCircleCI": "/images/tutorials/circleci.svg",
        "BitbucketPipe": "/images/alms/bitbucket.svg",
        "GitHubActions": "/images/alms/github.svg",
        "GitHubCircleCI": "/images/tutorials/circleci.svg",
        "GitHubTravis": "/images/tutorials/TravisCI-Mascot.png",
        "GitLabPipeline": "/images/alms/gitlab.svg",
        "azure": "azure.svg",
        "bitbucket": "bitbucket.svg",
        "cayc-1": "cayc-1-light.gif",
        "cayc-2": "cayc-2-light.gif",
        "cayc-3": "cayc-3-light.svg",
        "cayc-4": "cayc-4-light.svg",
        "github": "github.svg",
        "gitlab": "gitlab.svg",
        "microsoft": "microsoft.svg",
        "new-code-1": "new-code-1.svg",
        "new-code-2": "new-code-2-light.svg",
        "new-code-3": "new-code-3.gif",
        "new-code-4": "new-code-4.gif",
        "new-code-5": "new-code-5.png",
        "pull-requests-1": "pull-requests-1-light.gif",
        "pull-requests-2": "pull-requests-2-light.svg",
        "pull-requests-3": "pull-requests-3.svg",
        "quality-gate-1": "quality-gate-1.png",
        "quality-gate-2a": "quality-gate-2a.svg",
        "quality-gate-2b": "quality-gate-2b.png",
        "quality-gate-2c": "quality-gate-2c.png",
        "quality-gate-3": "quality-gate-3-light.svg",
        "quality-gate-4": "quality-gate-4.png",
        "quality-gate-5": "quality-gate-5.svg",
      },
      "logo": "sonarcloud-logo-black.svg",
      "shadows": {
        "lg": [
          [
            0,
            12,
            16,
            -4,
            29,
            33,
            47,
            0.1,
          ],
          [
            0,
            4,
            6,
            -2,
            29,
            33,
            47,
            0.05,
          ],
        ],
        "md": [
          [
            0,
            4,
            8,
            -2,
            29,
            33,
            47,
            0.1,
          ],
          [
            0,
            2,
            15,
            -2,
            29,
            33,
            47,
            0.06,
          ],
        ],
        "sm": [
          [
            0,
            1,
            3,
            0,
            29,
            33,
            47,
            0.05,
          ],
          [
            0,
            1,
            25,
            0,
            29,
            33,
            47,
            0.05,
          ],
        ],
        "xl": [
          [
            15,
            20,
            24,
            -4,
            29,
            33,
            47,
            0.1,
          ],
          [
            0,
            8,
            8,
            -4,
            29,
            33,
            47,
            0.06,
          ],
        ],
        "xs": [
          [
            0,
            1,
            2,
            0,
            29,
            33,
            47,
            0.05,
          ],
        ],
      },
    }
  }
  updateCurrentUserHomepage={[MockFunction]}
>
  <div>
    <Helmet
      title="Foo"
    />
    <div />
  </div>
</Extension>
`;

exports[`should render React extensions correctly 2`] = `
<Extension
  appState={
    {
      "documentationUrl": "https://docs.sonarqube.org/10.0",
      "edition": "community",
      "productionDatabase": true,
      "qualifiers": [
        "TRK",
      ],
      "settings": {},
      "version": "1.0",
    }
  }
  currentUser={
    {
      "dismissedNotices": {
        "educationPrinciples": false,
      },
      "isLoggedIn": false,
    }
  }
  extension={
    {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={{}}
  location={
    {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": {},
      "search": "",
      "state": {},
    }
  }
  router={
    {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
  theme={
    {
      "avatar": {
        "color": [
          [
            225,
            230,
            243,
          ],
          [
            209,
            215,
            254,
          ],
          [
            246,
            206,
            187,
          ],
          [
            236,
            253,
            243,
          ],
          [
            241,
            250,
            210,
          ],
          [
            254,
            245,
            208,
          ],
          [
            254,
            219,
            199,
          ],
          [
            254,
            228,
            226,
          ],
          [
            233,
            244,
            251,
          ],
        ],
        "contrast": [
          [
            8,
            9,
            12,
          ],
          [
            27,
            34,
            80,
          ],
          [
            130,
            43,
            10,
          ],
          [
            5,
            79,
            49,
          ],
          [
            49,
            85,
            22,
          ],
          [
            102,
            64,
            15,
          ],
          [
            122,
            46,
            14,
          ],
          [
            93,
            29,
            19,
          ],
          [
            23,
            67,
            97,
          ],
        ],
      },
      "borders": {
        "active": [
          "4px",
          "solid",
          123,
          135,
          217,
        ],
        "default": [
          "1px",
          "solid",
          235,
          235,
          235,
        ],
        "focus": [
          "4px",
          "solid",
          197,
          205,
          223,
          0.2,
        ],
        "xsActive": [
          "3px",
          "solid",
          123,
          135,
          217,
        ],
      },
      "colors": {
        "activityCommentPipe": [
          243,
          185,
          157,
        ],
        "almCardBorder": [
          221,
          221,
          221,
        ],
        "avatarBackground": [
          255,
          255,
          255,
        ],
        "avatarBorder": [
          225,
          230,
          243,
        ],
        "backgroundPrimary": [
          252,
          252,
          253,
        ],
        "backgroundSecondary": [
          255,
          255,
          255,
        ],
        "badgeCounter": [
          225,
          230,
          243,
        ],
        "badgeDefault": [
          225,
          230,
          243,
        ],
        "badgeDeleted": [
          254,
          228,
          226,
        ],
        "badgeNew": [
          209,
          215,
          254,
        ],
        "bannerIcon": "transparent",
        "bannerIconFocus": [
          217,
          45,
          32,
        ],
        "bannerIconHover": [
          217,
          45,
          32,
          0.2,
        ],
        "bannerMessage": [
          254,
          243,
          242,
        ],
        "bannerMessageIcon": [
          128,
          27,
          20,
        ],
        "border": [
          235,
          235,
          235,
        ],
        "breadcrumb": "transparent",
        "bubble.1": [
          18,
          183,
          106,
          0.3,
        ],
        "bubble.2": [
          110,
          183,
          18,
          0.3,
        ],
        "bubble.3": [
          245,
          184,
          64,
          0.3,
        ],
        "bubble.4": [
          247,
          95,
          9,
          0.3,
        ],
        "bubble.5": [
          240,
          68,
          56,
          0.3,
        ],
        "bubbleChartLine": [
          235,
          235,
          235,
        ],
        "bubbleDefault": [
          85,
          170,
          223,
          0.3,
        ],
        "button": [
          93,
          108,
          208,
        ],
        "buttonDisabled": [
          239,
          242,
          249,
        ],
        "buttonDisabledBorder": [
          197,
          205,
          223,
        ],
        "buttonHover": [
          75,
          86,
          187,
        ],
        "buttonSecondary": [
          255,
          255,
          255,
        ],
        "buttonSecondaryBorder": [
          197,
          205,
          223,
        ],
        "buttonSecondaryHover": [
          239,
          242,
          249,
        ],
        "checkboxCheckedHover": [
          123,
          135,
          217,
        ],
        "checkboxDisabled": [
          239,
          242,
          249,
        ],
        "checkboxDisabledChecked": [
          197,
          205,
          223,
        ],
        "checkboxHover": [
          232,
          235,
          255,
        ],
        "checkboxLabel": [
          62,
          67,
          87,
        ],
        "codeLine": [
          255,
          255,
          255,
        ],
        "codeLineBorder": [
          221,
          221,
          221,
        ],
        "codeLineCovered": [
          166,
          244,
          197,
        ],
        "codeLineCoveredUnderline": [
          18,
          183,
          106,
          0.15,
        ],
        "codeLineDuplication": [
          197,
          205,
          223,
        ],
        "codeLineEllipsis": [
          255,
          255,
          255,
        ],
        "codeLineEllipsisHover": [
          239,
          242,
          249,
        ],
        "codeLineHighlighted": [
          225,
          230,
          243,
        ],
        "codeLineHover": [
          239,
          242,
          249,
        ],
        "codeLineIssueIndicator": [
          106,
          117,
          144,
        ],
        "codeLineIssueLocation": [
          253,
          162,
          155,
          0.15,
        ],
        "codeLineIssueLocationSelected": [
          253,
          162,
          155,
          0.5,
        ],
        "codeLineIssueMessageTooltip": [
          62,
          67,
          87,
        ],
        "codeLineIssuePointerBorder": [
          255,
          255,
          255,
        ],
        "codeLineIssueSquiggle": [
          253,
          162,
          155,
        ],
        "codeLineLocationHighlighted": [
          197,
          205,
          223,
          0.6,
        ],
        "codeLineLocationMarker": [
          254,
          205,
          202,
        ],
        "codeLineLocationMarkerSelected": [
          253,
          162,
          155,
        ],
        "codeLineLocationSelected": [
          225,
          230,
          243,
        ],
        "codeLineMeta": [
          166,
          173,
          194,
        ],
        "codeLineMetaHover": [
          106,
          117,
          144,
        ],
        "codeLineNewCodeUnderline": [
          159,
          169,
          237,
          0.15,
        ],
        "codeLinePartiallyCoveredA": [
          217,
          45,
          32,
        ],
        "codeLinePartiallyCoveredB": [
          255,
          255,
          255,
        ],
        "codeLineUncovered": [
          217,
          45,
          32,
        ],
        "codeLineUncoveredUnderline": [
          240,
          68,
          56,
          0.15,
        ],
        "codeSnippetAnnotations": [
          34,
          84,
          192,
        ],
        "codeSnippetBackground": [
          252,
          252,
          253,
        ],
        "codeSnippetBody": [
          51,
          53,
          60,
        ],
        "codeSnippetBorder": [
          225,
          230,
          243,
        ],
        "codeSnippetComments": [
          109,
          111,
          119,
        ],
        "codeSnippetConstants": [
          126,
          83,
          5,
        ],
        "codeSnippetHighlight": [
          197,
          205,
          223,
        ],
        "codeSnippetInline": [
          62,
          67,
          87,
        ],
        "codeSnippetKeyword": [
          152,
          29,
          150,
        ],
        "codeSnippetKeywordLight": [
          28,
          28,
          163,
        ],
        "codeSnippetPreprocessingDirective": [
          47,
          103,
          48,
        ],
        "codeSnippetString": [
          32,
          105,
          31,
        ],
        "codeSyntaxAnnotations": [
          35,
          91,
          213,
        ],
        "codeSyntaxBody": [
          56,
          58,
          66,
        ],
        "codeSyntaxComments": [
          95,
          96,
          102,
        ],
        "codeSyntaxConstants": [
          135,
          87,
          2,
        ],
        "codeSyntaxKeyword": [
          162,
          34,
          160,
        ],
        "codeSyntaxKeywordLight": [
          30,
          30,
          173,
        ],
        "codeSyntaxPreprocessingDirective": [
          52,
          114,
          53,
        ],
        "codeSyntaxString": [
          36,
          117,
          35,
        ],
        "coreConceptsBody": [
          62,
          67,
          87,
        ],
        "coreConceptsCloseIcon": [
          166,
          173,
          194,
        ],
        "coreConceptsCompleted": [
          18,
          183,
          106,
        ],
        "coreConceptsHomeBorder": [
          225,
          230,
          243,
        ],
        "coreConceptsProgressBar": [
          239,
          242,
          249,
        ],
        "coreConceptsPulse": [
          93,
          108,
          208,
        ],
        "coreConceptsPulseFallback": [
          255,
          255,
          255,
        ],
        "coreConceptsTitle": [
          62,
          67,
          87,
        ],
        "coverageGreen": [
          18,
          183,
          106,
        ],
        "coverageRed": [
          180,
          35,
          24,
        ],
        "currentColor": "currentColor",
        "danger": [
          180,
          35,
          24,
        ],
        "dangerButton": [
          217,
          45,
          32,
        ],
        "dangerButtonFocus": [
          217,
          45,
          32,
        ],
        "dangerButtonHover": [
          180,
          35,
          24,
        ],
        "dangerButtonSecondary": [
          255,
          255,
          255,
        ],
        "dangerButtonSecondaryBorder": [
          253,
          162,
          155,
        ],
        "dangerButtonSecondaryFocus": [
          249,
          112,
          102,
        ],
        "dangerButtonSecondaryHover": [
          254,
          243,
          242,
        ],
        "datePicker": [
          255,
          255,
          255,
        ],
        "datePickerDefault": [
          255,
          255,
          255,
        ],
        "datePickerDisabled": [
          255,
          255,
          255,
        ],
        "datePickerHover": [
          225,
          230,
          243,
        ],
        "datePickerIcon": [
          197,
          205,
          223,
        ],
        "datePickerRange": [
          209,
          215,
          254,
        ],
        "datePickerSelected": [
          93,
          108,
          208,
        ],
        "destructiveIcon": "transparent",
        "destructiveIconFocus": [
          217,
          45,
          32,
        ],
        "destructiveIconHover": [
          254,
          243,
          242,
        ],
        "discreetBackground": [
          255,
          255,
          255,
        ],
        "discreetBorder": [
          197,
          205,
          223,
        ],
        "discreetButtonHover": [
          93,
          108,
          208,
        ],
        "discreetFocus": [
          232,
          235,
          255,
        ],
        "discreetFocusBorder": [
          123,
          135,
          217,
        ],
        "discreetHover": [
          239,
          242,
          249,
        ],
        "discreetInteractiveIcon": [
          106,
          117,
          144,
        ],
        "drilldown": [
          62,
          67,
          87,
        ],
        "drilldownBorder": [
          197,
          205,
          223,
        ],
        "dropdownMenu": [
          255,
          255,
          255,
        ],
        "dropdownMenuDanger": [
          217,
          45,
          32,
        ],
        "dropdownMenuDisabled": [
          255,
          255,
          255,
        ],
        "dropdownMenuFocus": [
          232,
          235,
          255,
        ],
        "dropdownMenuFocusBorder": [
          123,
          135,
          217,
        ],
        "dropdownMenuHeader": [
          255,
          255,
          255,
        ],
        "dropdownMenuHover": [
          239,
          242,
          249,
        ],
        "dropdownMenuSubTitle": [
          106,
          117,
          144,
        ],
        "duplicationsIndicator.A": [
          18,
          183,
          106,
        ],
        "duplicationsIndicator.B": [
          18,
          183,
          106,
        ],
        "duplicationsIndicator.C": [
          110,
          183,
          18,
        ],
        "duplicationsIndicator.D": [
          245,
          184,
          64,
        ],
        "duplicationsIndicator.E": [
          247,
          95,
          9,
        ],
        "duplicationsIndicator.F": [
          240,
          68,
          56,
        ],
        "duplicationsIndicatorSecondary": [
          239,
          242,
          249,
        ],
        "errorBackground": [
          254,
          243,
          242,
        ],
        "errorBorder": [
          249,
          112,
          102,
        ],
        "errorText": [
          180,
          35,
          24,
        ],
        "facetHeader": [
          42,
          47,
          64,
        ],
        "facetHeaderDisabled": [
          106,
          117,
          144,
        ],
        "facetItemDisabled": [
          166,
          173,
          194,
        ],
        "facetItemGraph": [
          197,
          205,
          223,
        ],
        "facetItemLight": [
          106,
          117,
          144,
        ],
        "facetItemSelected": [
          232,
          235,
          255,
        ],
        "facetItemSelectedBorder": [
          123,
          135,
          217,
        ],
        "facetItemSelectedHover": [
          209,
          215,
          254,
        ],
        "facetKeyboardHint": [
          239,
          242,
          249,
        ],
        "facetToggleActive": [
          18,
          183,
          106,
        ],
        "facetToggleHover": [
          42,
          47,
          64,
        ],
        "facetToggleInactive": [
          240,
          68,
          56,
        ],
        "filterbar": [
          255,
          255,
          255,
        ],
        "filterbarBorder": [
          225,
          230,
          243,
        ],
        "flagMessageBackground": [
          255,
          255,
          255,
        ],
        "footer": [
          255,
          255,
          255,
        ],
        "footerBorder": [
          221,
          221,
          221,
        ],
        "graphCursorLineColor": [
          106,
          117,
          144,
        ],
        "graphGridColor": [
          235,
          235,
          235,
        ],
        "graphLegendBorder": [
          62,
          67,
          87,
        ],
        "graphLineColor.0": [
          58,
          127,
          173,
        ],
        "graphLineColor.1": [
          85,
          170,
          223,
        ],
        "graphLineColor.2": [
          143,
          202,
          234,
        ],
        "graphLineColor.3": [
          58,
          127,
          173,
        ],
        "graphLineColor.4": [
          85,
          170,
          223,
        ],
        "graphLineColor.5": [
          143,
          202,
          234,
        ],
        "graphPointCircleColor": [
          255,
          255,
          255,
        ],
        "graphZoomBackgroundColor": [
          252,
          252,
          253,
        ],
        "graphZoomBorderColor": [
          225,
          230,
          243,
        ],
        "graphZoomHandleColor": [
          106,
          117,
          144,
        ],
        "highlightedSection": [
          252,
          252,
          253,
        ],
        "highlightedSectionBorder": [
          225,
          230,
          243,
        ],
        "iconCheck": [
          18,
          183,
          106,
        ],
        "iconDirectory": [
          254,
          150,
          75,
        ],
        "iconError": [
          217,
          45,
          32,
        ],
        "iconFavorite": [
          237,
          148,
          106,
        ],
        "iconFile": [
          166,
          173,
          194,
        ],
        "iconHelperHint": [
          225,
          230,
          243,
        ],
        "iconInfo": [
          69,
          149,
          203,
        ],
        "iconNegativeUpdate": [
          253,
          162,
          155,
        ],
        "iconNotificationsOn": [
          159,
          169,
          237,
        ],
        "iconOverviewIssue": [
          106,
          117,
          144,
        ],
        "iconPositiveUpdate": [
          166,
          244,
          197,
        ],
        "iconProject": [
          166,
          173,
          194,
        ],
        "iconRuleInheritanceOverride": [
          249,
          112,
          102,
        ],
        "iconSeverityInfo": [
          110,
          185,
          228,
        ],
        "iconSeverityMajor": [
          249,
          112,
          102,
        ],
        "iconSeverityMinor": [
          166,
          208,
          91,
        ],
        "iconStatus": [
          197,
          205,
          223,
        ],
        "iconStatusResolved": [
          106,
          117,
          144,
        ],
        "iconSuccess": [
          3,
          152,
          85,
        ],
        "iconTrendDisabled": [
          106,
          117,
          144,
        ],
        "iconTrendNegative": [
          249,
          112,
          102,
        ],
        "iconTrendNeutral": [
          110,
          185,
          228,
        ],
        "iconTrendPositive": [
          50,
          213,
          131,
        ],
        "iconUnitTest": [
          166,
          173,
          194,
        ],
        "iconWarning": [
          209,
          152,
          52,
        ],
        "illustrationInlineBorder": [
          225,
          230,
          243,
        ],
        "illustrationOutline": [
          106,
          117,
          144,
        ],
        "illustrationPrimary": [
          123,
          135,
          217,
        ],
        "illustrationSecondary": [
          189,
          198,
          255,
        ],
        "illustrationShade": [
          244,
          246,
          255,
        ],
        "infoBackground": [
          245,
          251,
          255,
        ],
        "infoBorder": [
          110,
          185,
          228,
        ],
        "inputBackground": [
          255,
          255,
          255,
        ],
        "inputBorder": [
          197,
          205,
          223,
        ],
        "inputDanger": [
          217,
          45,
          32,
        ],
        "inputDangerFocus": [
          249,
          112,
          102,
        ],
        "inputDisabled": [
          239,
          242,
          249,
        ],
        "inputDisabledBorder": [
          197,
          205,
          223,
        ],
        "inputFocus": [
          123,
          135,
          217,
        ],
        "inputPlaceholder": [
          106,
          117,
          144,
        ],
        "inputRequired": [
          180,
          35,
          24,
        ],
        "inputSuccess": [
          110,
          183,
          18,
        ],
        "inputSuccessFocus": [
          166,
          208,
          91,
        ],
        "interactiveIcon": "transparent",
        "interactiveIconFocus": [
          93,
          108,
          208,
        ],
        "interactiveIconHover": [
          232,
          235,
          255,
        ],
        "issueBoxBorder": [
          197,
          205,
          223,
        ],
        "issueBoxBorderDepracated": [
          197,
          205,
          223,
        ],
        "issueBoxSelectedBorder": [
          253,
          162,
          155,
        ],
        "issueTypeIcon": [
          254,
          205,
          202,
        ],
        "keyboardHintKey": [
          225,
          230,
          243,
        ],
        "linkActive": [
          75,
          86,
          187,
        ],
        "linkDefault": [
          93,
          108,
          208,
        ],
        "linkDiscreet": "currentColor",
        "linkTooltipActive": [
          209,
          215,
          254,
        ],
        "linkTooltipDefault": [
          189,
          198,
          255,
        ],
        "listMarker": [
          166,
          173,
          194,
        ],
        "mainBar": [
          255,
          255,
          255,
        ],
        "mainBarDarkLogo": [
          18,
          20,
          29,
        ],
        "mainBarHover": [
          42,
          47,
          64,
        ],
        "mainBarLogo": [
          255,
          255,
          255,
        ],
        "mainBarNews": [
          232,
          235,
          255,
        ],
        "menuBorder": [
          123,
          135,
          217,
        ],
        "modalContents": [
          255,
          255,
          255,
        ],
        "modalOverlay": [
          8,
          9,
          12,
          0.75,
        ],
        "navbar": [
          255,
          255,
          255,
        ],
        "navbarTextMeta": [
          62,
          67,
          87,
        ],
        "newCodeHighlight": [
          159,
          169,
          237,
        ],
        "newCodeLegend": [
          159,
          169,
          237,
          0.15,
        ],
        "newCodeLegendBorder": [
          189,
          198,
          255,
        ],
        "newsBar": [
          255,
          255,
          255,
        ],
        "newsBorder": [
          221,
          221,
          221,
        ],
        "newsContent": [
          255,
          255,
          255,
        ],
        "newsTag": [
          239,
          242,
          249,
        ],
        "numberedList": [
          232,
          235,
          255,
        ],
        "pageBlock": [
          255,
          255,
          255,
        ],
        "pageBlockBorder": [
          225,
          230,
          243,
        ],
        "pageContent": [
          62,
          67,
          87,
        ],
        "pageContentDark": [
          42,
          47,
          64,
        ],
        "pageContentLight": [
          106,
          117,
          144,
        ],
        "pageTitle": [
          29,
          33,
          47,
        ],
        "pipeSeparator": [
          225,
          230,
          243,
        ],
        "popup": [
          255,
          255,
          255,
        ],
        "popupBorder": [
          197,
          205,
          223,
        ],
        "primary": [
          93,
          108,
          208,
        ],
        "primaryDark": [
          75,
          86,
          187,
        ],
        "primaryLight": [
          123,
          135,
          217,
        ],
        "productNews": [
          232,
          235,
          255,
        ],
        "productNewsHover": [
          209,
          215,
          254,
        ],
        "projectCardBackground": [
          255,
          255,
          255,
        ],
        "projectCardBorder": [
          225,
          230,
          243,
        ],
        "qgIndicatorFailed": [
          254,
          205,
          202,
        ],
        "qgIndicatorNotComputed": [
          197,
          205,
          223,
        ],
        "qgIndicatorPassed": [
          209,
          250,
          223,
        ],
        "radio": [
          93,
          108,
          208,
        ],
        "radioBorder": [
          93,
          108,
          208,
        ],
        "radioChecked": [
          232,
          235,
          255,
        ],
        "radioDisabled": [
          197,
          205,
          223,
        ],
        "radioDisabledBackground": [
          239,
          242,
          249,
        ],
        "radioDisabledBorder": [
          197,
          205,
          223,
        ],
        "radioFocus": [
          232,
          235,
          255,
        ],
        "radioFocusBorder": [
          159,
          169,
          237,
        ],
        "radioFocusOutline": [
          159,
          169,
          237,
          0.2,
        ],
        "radioHover": [
          232,
          235,
          255,
        ],
        "rating.A": [
          209,
          250,
          223,
        ],
        "rating.B": [
          225,
          245,
          168,
        ],
        "rating.C": [
          252,
          233,
          163,
        ],
        "rating.D": [
          255,
          214,
          175,
        ],
        "rating.E": [
          254,
          205,
          202,
        ],
        "resizer": [
          197,
          205,
          223,
        ],
        "roadmap": [
          244,
          246,
          255,
        ],
        "roadmapContent": "transparent",
        "scrollbar": [
          252,
          252,
          253,
        ],
        "searchHighlight": [
          250,
          230,
          220,
        ],
        "selectOptionSelected": [
          239,
          242,
          249,
        ],
        "selectionCardBorder": [
          225,
          230,
          243,
        ],
        "selectionCardBorderDisabled": [
          197,
          205,
          223,
        ],
        "selectionCardBorderHover": [
          189,
          198,
          255,
        ],
        "selectionCardBorderSelected": [
          123,
          135,
          217,
        ],
        "selectionCardDisabled": [
          239,
          242,
          249,
        ],
        "selectionCardHeader": [
          62,
          67,
          87,
        ],
        "separatorCircle": [
          197,
          205,
          223,
        ],
        "separatorSlash": [
          166,
          173,
          194,
        ],
        "sidebarActiveIcon": [
          197,
          205,
          223,
        ],
        "sidebarBackground": [
          29,
          33,
          47,
        ],
        "sidebarBorder": [
          62,
          67,
          87,
        ],
        "sidebarIcon": [
          106,
          117,
          144,
        ],
        "sidebarItemActive": [
          18,
          20,
          29,
        ],
        "sidebarTextDisabled": [
          106,
          117,
          144,
        ],
        "sizeIndicator": [
          85,
          170,
          223,
        ],
        "sonarcloud": [
          243,
          112,
          42,
        ],
        "subnavigation": [
          255,
          255,
          255,
        ],
        "subnavigationBorder": [
          221,
          221,
          221,
        ],
        "subnavigationDisabled": [
          166,
          173,
          194,
        ],
        "subnavigationExecutionFlow": [
          252,
          252,
          253,
        ],
        "subnavigationExecutionFlowActive": [
          93,
          108,
          208,
        ],
        "subnavigationExecutionFlowBorder": [
          197,
          205,
          223,
        ],
        "subnavigationExecutionFlowSeparator": [
          225,
          230,
          243,
        ],
        "subnavigationHover": [
          239,
          242,
          249,
        ],
        "subnavigationSelected": [
          225,
          230,
          243,
        ],
        "subnavigationSeparator": [
          235,
          235,
          235,
        ],
        "subnavigationSubheading": [
          252,
          252,
          253,
        ],
        "successBackground": [
          246,
          254,
          249,
        ],
        "successBorder": [
          50,
          213,
          131,
        ],
        "switch": [
          197,
          205,
          223,
        ],
        "switchActive": [
          93,
          108,
          208,
        ],
        "switchButton": [
          255,
          255,
          255,
        ],
        "switchButtonDisabled": [
          239,
          242,
          249,
        ],
        "switchDisabled": [
          225,
          230,
          243,
        ],
        "switchHover": [
          166,
          173,
          194,
        ],
        "switchHoverActive": [
          123,
          135,
          217,
        ],
        "tabBorder": [
          123,
          135,
          217,
        ],
        "tableRowHover": [
          244,
          246,
          255,
        ],
        "tableRowSelected": [
          159,
          169,
          237,
        ],
        "tag": [
          239,
          242,
          249,
        ],
        "thirdPartyButton": [
          255,
          255,
          255,
        ],
        "thirdPartyButtonBorder": [
          197,
          205,
          223,
        ],
        "thirdPartyButtonHover": [
          239,
          242,
          249,
        ],
        "toggle": [
          255,
          255,
          255,
        ],
        "toggleBorder": [
          197,
          205,
          223,
        ],
        "toggleFocus": [
          197,
          205,
          223,
          0.2,
        ],
        "toggleHover": [
          239,
          242,
          249,
        ],
        "tooltipBackground": [
          42,
          47,
          64,
        ],
        "tooltipHighlight": [
          197,
          205,
          223,
        ],
        "tooltipSeparator": [
          106,
          117,
          144,
        ],
        "transparent": "transparent",
        "warningBackground": [
          252,
          245,
          228,
        ],
        "warningBorder": [
          248,
          205,
          92,
        ],
      },
      "contrasts": {
        "backgroundPrimary": [
          8,
          9,
          12,
        ],
        "backgroundSecondary": [
          8,
          9,
          12,
        ],
        "badgeCounter": [
          62,
          67,
          87,
        ],
        "badgeDefault": [
          29,
          33,
          47,
        ],
        "badgeDeleted": [
          93,
          29,
          19,
        ],
        "badgeNew": [
          27,
          34,
          80,
        ],
        "bannerIcon": [
          128,
          27,
          20,
        ],
        "bannerIconHover": [
          128,
          27,
          20,
        ],
        "bannerMessage": [
          93,
          29,
          19,
        ],
        "breadcrumb": [
          106,
          117,
          144,
        ],
        "bubble.1": [
          18,
          183,
          106,
        ],
        "bubble.2": [
          110,
          183,
          18,
        ],
        "bubble.3": [
          245,
          184,
          64,
        ],
        "bubble.4": [
          247,
          95,
          9,
        ],
        "bubble.5": [
          240,
          68,
          56,
        ],
        "bubbleDefault": [
          85,
          170,
          223,
        ],
        "buttonDisabled": [
          166,
          173,
          194,
        ],
        "buttonSecondary": [
          62,
          67,
          87,
        ],
        "checkboxDisabled": [
          197,
          205,
          223,
        ],
        "codeLineCoveredUnderline": [
          2,
          122,
          72,
        ],
        "codeLineEllipsis": [
          166,
          173,
          194,
        ],
        "codeLineEllipsisHover": [
          106,
          117,
          144,
        ],
        "codeLineIssueMessageTooltip": [
          252,
          252,
          253,
        ],
        "codeLineLocationMarker": [
          93,
          29,
          19,
        ],
        "codeLineLocationMarkerSelected": [
          93,
          29,
          19,
        ],
        "codeLineNewCodeUnderline": [
          93,
          108,
          208,
        ],
        "codeLineUncoveredUnderline": [
          180,
          35,
          24,
        ],
        "codeSnippetHighlight": [
          217,
          45,
          32,
        ],
        "coreConceptsProgressBar": [
          123,
          135,
          217,
        ],
        "dangerButton": [
          255,
          255,
          255,
        ],
        "dangerButtonSecondary": [
          180,
          35,
          24,
        ],
        "datePicker": [
          166,
          173,
          194,
        ],
        "datePickerDefault": [
          42,
          47,
          64,
        ],
        "datePickerDisabled": [
          166,
          173,
          194,
        ],
        "datePickerHover": [
          42,
          47,
          64,
        ],
        "datePickerRange": [
          42,
          47,
          64,
        ],
        "datePickerSelected": [
          255,
          255,
          255,
        ],
        "destructiveIcon": [
          217,
          45,
          32,
        ],
        "destructiveIconHover": [
          128,
          27,
          20,
        ],
        "discreetBackground": [
          62,
          67,
          87,
        ],
        "discreetHover": [
          62,
          67,
          87,
        ],
        "dropdownMenu": [
          62,
          67,
          87,
        ],
        "dropdownMenuDisabled": [
          166,
          173,
          194,
        ],
        "dropdownMenuHeader": [
          106,
          117,
          144,
        ],
        "facetKeyboardHint": [
          62,
          67,
          87,
        ],
        "facetToggleActive": [
          255,
          255,
          255,
        ],
        "facetToggleInactive": [
          255,
          255,
          255,
        ],
        "filterbar": [
          62,
          67,
          87,
        ],
        "flagMessageBackground": [
          62,
          67,
          87,
        ],
        "footer": [
          106,
          117,
          144,
        ],
        "graphZoomHandleColor": [
          255,
          255,
          255,
        ],
        "iconHelperHint": [
          62,
          67,
          87,
        ],
        "iconSeverityInfo": [
          255,
          255,
          255,
        ],
        "iconSeverityMajor": [
          255,
          255,
          255,
        ],
        "iconSeverityMinor": [
          255,
          255,
          255,
        ],
        "iconStatusResolved": [
          255,
          255,
          255,
        ],
        "infoBackground": [
          23,
          67,
          97,
        ],
        "inputBackground": [
          62,
          67,
          87,
        ],
        "inputDisabled": [
          166,
          173,
          194,
        ],
        "interactiveIcon": [
          75,
          86,
          187,
        ],
        "interactiveIconHover": [
          43,
          51,
          104,
        ],
        "issueTypeIcon": [
          93,
          29,
          19,
        ],
        "keyboardHintKey": [
          62,
          67,
          87,
        ],
        "mainBar": [
          62,
          67,
          87,
        ],
        "mainBarDarkLogo": [
          255,
          255,
          255,
        ],
        "mainBarLogo": [
          0,
          0,
          0,
        ],
        "mainBarNews": [
          62,
          67,
          87,
        ],
        "navbar": [
          62,
          67,
          87,
        ],
        "newsBar": [
          42,
          47,
          64,
        ],
        "newsContent": [
          62,
          67,
          87,
        ],
        "newsTag": [
          62,
          67,
          87,
        ],
        "numberedList": [
          43,
          51,
          104,
        ],
        "pageBlock": [
          62,
          67,
          87,
        ],
        "popup": [
          62,
          67,
          87,
        ],
        "primary": [
          255,
          255,
          255,
        ],
        "primaryLight": [
          62,
          67,
          87,
        ],
        "productNews": [
          62,
          67,
          87,
        ],
        "productNewsHover": [
          62,
          67,
          87,
        ],
        "qgIndicatorFailed": [
          128,
          27,
          20,
        ],
        "qgIndicatorNotComputed": [
          18,
          20,
          29,
        ],
        "qgIndicatorPassed": [
          5,
          96,
          58,
        ],
        "rating.A": [
          5,
          79,
          49,
        ],
        "rating.B": [
          49,
          85,
          22,
        ],
        "rating.C": [
          102,
          64,
          15,
        ],
        "rating.D": [
          122,
          46,
          14,
        ],
        "rating.E": [
          93,
          29,
          19,
        ],
        "roadmap": [
          42,
          47,
          64,
        ],
        "roadmapContent": [
          62,
          67,
          87,
        ],
        "scrollbar": [
          221,
          221,
          221,
        ],
        "searchHighlight": [
          62,
          67,
          87,
        ],
        "selectionCardDisabled": [
          106,
          117,
          144,
        ],
        "sidebarBackground": [
          197,
          205,
          223,
        ],
        "sidebarItemActive": [
          252,
          252,
          253,
        ],
        "sizeIndicator": [
          255,
          255,
          255,
        ],
        "subnavigation": [
          62,
          67,
          87,
        ],
        "subnavigationExecutionFlow": [
          29,
          33,
          47,
        ],
        "subnavigationHover": [
          29,
          33,
          47,
        ],
        "subnavigationSubheading": [
          106,
          117,
          144,
        ],
        "switchButton": [
          93,
          108,
          208,
        ],
        "switchButtonDisabled": [
          166,
          173,
          194,
        ],
        "switchHover": [
          123,
          135,
          217,
        ],
        "tag": [
          62,
          67,
          87,
        ],
        "thirdPartyButton": [
          62,
          67,
          87,
        ],
        "toggle": [
          62,
          67,
          87,
        ],
        "toggleHover": [
          62,
          67,
          87,
        ],
        "tooltipBackground": [
          239,
          242,
          249,
        ],
      },
      "highlightTheme": "atom-one-light.css",
      "id": "light-theme",
      "images": {
        "AzurePipe": "/images/alms/azure.svg",
        "BitbucketAzure": "/images/alms/azure.svg",
        "BitbucketCircleCI": "/images/tutorials/circleci.svg",
        "BitbucketPipe": "/images/alms/bitbucket.svg",
        "GitHubActions": "/images/alms/github.svg",
        "GitHubCircleCI": "/images/tutorials/circleci.svg",
        "GitHubTravis": "/images/tutorials/TravisCI-Mascot.png",
        "GitLabPipeline": "/images/alms/gitlab.svg",
        "azure": "azure.svg",
        "bitbucket": "bitbucket.svg",
        "cayc-1": "cayc-1-light.gif",
        "cayc-2": "cayc-2-light.gif",
        "cayc-3": "cayc-3-light.svg",
        "cayc-4": "cayc-4-light.svg",
        "github": "github.svg",
        "gitlab": "gitlab.svg",
        "microsoft": "microsoft.svg",
        "new-code-1": "new-code-1.svg",
        "new-code-2": "new-code-2-light.svg",
        "new-code-3": "new-code-3.gif",
        "new-code-4": "new-code-4.gif",
        "new-code-5": "new-code-5.png",
        "pull-requests-1": "pull-requests-1-light.gif",
        "pull-requests-2": "pull-requests-2-light.svg",
        "pull-requests-3": "pull-requests-3.svg",
        "quality-gate-1": "quality-gate-1.png",
        "quality-gate-2a": "quality-gate-2a.svg",
        "quality-gate-2b": "quality-gate-2b.png",
        "quality-gate-2c": "quality-gate-2c.png",
        "quality-gate-3": "quality-gate-3-light.svg",
        "quality-gate-4": "quality-gate-4.png",
        "quality-gate-5": "quality-gate-5.svg",
      },
      "logo": "sonarcloud-logo-black.svg",
      "shadows": {
        "lg": [
          [
            0,
            12,
            16,
            -4,
            29,
            33,
            47,
            0.1,
          ],
          [
            0,
            4,
            6,
            -2,
            29,
            33,
            47,
            0.05,
          ],
        ],
        "md": [
          [
            0,
            4,
            8,
            -2,
            29,
            33,
            47,
            0.1,
          ],
          [
            0,
            2,
            15,
            -2,
            29,
            33,
            47,
            0.06,
          ],
        ],
        "sm": [
          [
            0,
            1,
            3,
            0,
            29,
            33,
            47,
            0.05,
          ],
          [
            0,
            1,
            25,
            0,
            29,
            33,
            47,
            0.05,
          ],
        ],
        "xl": [
          [
            15,
            20,
            24,
            -4,
            29,
            33,
            47,
            0.1,
          ],
          [
            0,
            8,
            8,
            -4,
            29,
            33,
            47,
            0.06,
          ],
        ],
        "xs": [
          [
            0,
            1,
            2,
            0,
            29,
            33,
            47,
            0.05,
          ],
        ],
      },
    }
  }
  updateCurrentUserHomepage={[MockFunction]}
>
  <div>
    <Helmet
      title="Foo"
    />
    <div
      className="extension"
    />
  </div>
</Extension>
`;
